<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="171dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/botAndroid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/androidbot"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="20dp"
        android:text="@string/plane"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/plane"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/watermelon"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/update"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/gray"
        android:text="@string/picGallery"
        android:textColor="@color/watermelon"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/darkgray"
        android:text="@string/unlock5"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/star"
        android:drawableRight="@drawable/star"
        android:isScrollContainer="false"
        android:selectAllOnFocus="false"
        android:text="@string/level4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:iconSize="20dp"
        app:iconTint="@color/gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button6"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/green"
        android:text="@string/musicP"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/pause"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</androidx.constraintlayout.widget.ConstraintLayout>